--- a/src/gridsearchsvm/GridSearchSVM.form
+++ b/src/gridsearchsvm/GridSearchSVM.form
@@ -71,7 +71,7 @@
                                   <EmptySpace max="-2" attributes="0"/>
                                   <Component id="selectFile" min="-2" max="-2" attributes="0"/>
                               </Group>
-                              <Component id="jCheckBox1" alignment="0" min="-2" max="-2" attributes="0"/>
+                              <Component id="checkBoxFeatures" alignment="0" min="-2" max="-2" attributes="0"/>
                               <Component id="jLabel2" alignment="0" min="-2" max="-2" attributes="0"/>
                           </Group>
                       </Group>
@@ -254,7 +254,7 @@
               <EmptySpace type="unrelated" max="-2" attributes="0"/>
               <Component id="jSeparator3" min="-2" pref="10" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
-              <Component id="jCheckBox1" min="-2" max="-2" attributes="0"/>
+              <Component id="checkBoxFeatures" min="-2" max="-2" attributes="0"/>
               <EmptySpace type="separate" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="jLabel4" alignment="3" min="-2" max="-2" attributes="0"/>
@@ -284,6 +284,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Run"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="runButtonActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JProgressBar" name="runProgressBar">
     </Component>
@@ -318,7 +321,7 @@
         <Property name="text" type="java.lang.String" value="100%"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JCheckBox" name="jCheckBox1">
+    <Component class="javax.swing.JCheckBox" name="checkBoxFeatures">
       <Properties>
         <Property name="text" type="java.lang.String" value="Feature reduction"/>
       </Properties>
